# data-analitics

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
docs/: DEVELOP.md
experiments/house-price/: house-price.ipynb
experiments/house-price/submit/: houseprices_submit01.csv  houseprices_submit02.csv  houseprices_submit03.csv  houseprices_submit04.csv
experiments/titanic/: Feature_Importance.ipynb  README.md  analize.ipynb  exported.py  kaggle_titanic.ipynb  plane_code.ipynb  plane_code.py  titanic-modeling.ipynb  titanic-prep-feature-gen.ipynb  titanic.ipynb  titanic.py
experiments/titanic/learn/: cross_validation.py
js/: bar_chart.html
notebooks/: NumPy-2.ipynb  NumPy.ipynb  play-pandas.ipynb  titanic-prep-feature-gen.ipynb  titanic.ipynb
notebooks/.ipynb_checkpoints/: NumPy-2-checkpoint.ipynb
notebooks/stock/: 1.ipynb
src/data_analitics/plot/: box_plot.py  dumbbell_chart.py  heat_map.py
src/data_analitics/stock/: stock_data.py
statistics/level_0/data/: statistics_training_sample.csv
statistics/level_0/notebook/: statistics_training_template_with_plot.ipynb
statistics/level_0/src/: statistics_training_template.py
