[project]
name = "data-analitics"
version = "0.1.0"
description = ""
authors = [
    {name = "behike56",email = "engineering@lambda-publishing.dev"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "six (>=1.17.0,<2.0.0)",
    "mplfinance (>=0.12.10b0,<0.13.0)",
    "pandas-datareader (>=0.10.0,<0.11.0)",
    "standard-distutils (>=3.11.9,<4.0.0)"
]

[tool.poetry]
packages = [{include = "data_analitics", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
