[project]
name = "data-analitics"
version = "0.1.0"
description = ""
authors = [
    {name = "behike56",email = "engineering@lambda-publishing.dev"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "six (>=1.17.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "optuna (>=4.4.0,<5.0.0)",
    "xgboost (>=3.0.4,<4.0.0)"
]

[tool.poetry]
packages = [{include = "data_analitics", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
